--- a/aboutus.html
+++ b/aboutus.html
@@ -35,24 +35,24 @@
         <li><a href="fandq.html">F&amp;Q</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="index.html">index</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="aboutus.html">About us</a></li>
-        <li><a href="inhouse.html">In house afternoon tea</a></li>
-        <li><a href="external.html">External Afternnon tea</a></li>
-        <li><a href="external.html">F &amp;Q</a></li>
+        <li><a href="inhouse.html">In house Afternoon tea</a></li>
+        <li><a href="external.html">External Afternoon tea</a></li>
+        <li><a href="fandq.html">F&amp;Q</a></li>
       </ul>
     </div>
   </nav>
     <!-- End of nav bar-->
          <main>
         <!--Section Title-->
-            <a class="brand-logo center"><h4>Home Page</h4></a>
+            <a class="brand-logo center"><h4>About us</h4></a>
         <!--Image-->
             <div class="row container">
                 <div class="col s3 m3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/Img1.jpg">
+                            <a href="https://placeholder.com"><img src="http://via.placeholder.com/1200x1000"></a>
                         </div>
                     </div>
                 </div>
@@ -67,15 +67,43 @@
                         </div>
                     </div>
                 </div>
+                <div class="col s3 m3">
+                    <div class="card">
+                        <div class="card-image">
+                        <a href="https://placeholder.com"><img src="http://via.placeholder.com/1200x1000"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s8">
+                        <div class="card">
+                            <div class="card-image">
+                            <div class="card-content black-text">
+                                <span class="card-title">Afternoon tea's</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et mattis justo, sit amet varius lacus. Vestibulum non congue justo. Vivamus consequat at justo ac aliquam. Cras pellentesque varius nisi eget feugiat. Nulla facilisi. Ut pharetra non mauris sed rhoncus. In porttitor gravida ante, eu vestibulum purus euismod a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vel tempus leo. Aliquam sed eros sit amet arcu vehicula egestas. Curabitur tristique eros in magna malesuada, non mollis orci aliquet. Nullam facilisis varius imperdiet.</p>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="col s3 m3">
+                    <div class="card">
+                        <div class="card-image">
+                            <a href="https://placeholder.com"><img src="http://via.placeholder.com/1200x1000"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s8">
+                        <div class="card">
+                            <div class="card-content black-text">
+                                <span class="card-title">Lesley</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et mattis justo, sit amet varius lacus. Vestibulum non congue justo. Vivamus consequat at justo ac aliquam. Cras pellentesque varius nisi eget feugiat. Nulla facilisi. Ut pharetra non mauris sed rhoncus. In porttitor gravida ante, eu vestibulum purus euismod a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vel tempus leo. Aliquam sed eros sit amet arcu vehicula egestas. Curabitur tristique eros in magna malesuada, non mollis orci aliquet. Nullam facilisis varius imperdiet.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-             <div class="row"> 
-      <div class="col s4 m4">
-          </div>
-          <div class="row">
-           <a href="https://placeholder.com"><img src="http://via.placeholder.com/400x400"></a>
-      </div>
-      </div>
-             
         <!--Second Text-->
         </main>
         <footer class="page-footer">
