--- a/inhouse.html
+++ b/inhouse.html
@@ -35,48 +35,56 @@
         <li><a href="fandq.html">F&amp;Q</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li><a href="index.html">index</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="aboutus.html">About us</a></li>
         <li><a href="inhouse.html">In house afternoon tea</a></li>
-        <li><a href="external.html">External Afternnon tea</a></li>
-        <li><a href="external.html">F &amp;Q</a></li>
+        <li><a href="external.html">External Afternoon tea</a></li>
+        <li><a href="fandq.html">F&amp;Q</a></li>
       </ul>
     </div>
   </nav>
     <!-- End of nav bar-->
          <main>
-        <!--Section Title-->
-            <a class="brand-logo center"><h4>Home Page</h4></a>
-        <!--Image-->
-            <div class="row container">
-                <div class="col s3 m3">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="assets/Img1.jpg">
-                        </div>
-                    </div>
-                </div>
-                <!--Main text-->
-                <div class="row">
-                    <div class="col s8">
-                        <div class="card">
-                            <div class="card-content black-text">
-                                <span class="card-title">Afternoon tea's</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et mattis justo, sit amet varius lacus. Vestibulum non congue justo. Vivamus consequat at justo ac aliquam. Cras pellentesque varius nisi eget feugiat. Nulla facilisi. Ut pharetra non mauris sed rhoncus. In porttitor gravida ante, eu vestibulum purus euismod a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vel tempus leo. Aliquam sed eros sit amet arcu vehicula egestas. Curabitur tristique eros in magna malesuada, non mollis orci aliquet. Nullam facilisis varius imperdiet.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <!--First card-->
+            <a class="brand-logo center"><h4>In House afternoon tea</h4></a>
+        <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/sample-1.jpg">
+              <span class="card-title">Card Title</span>
             </div>
-             <div class="row"> 
-      <div class="col s4 m4">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
           </div>
-          <div class="row">
-           <a href="https://placeholder.com"><img src="http://via.placeholder.com/400x400"></a>
+        </div>
       </div>
+    <!-- End of frist card-->
+    <!-- Start of second card-->
+     <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/sample-1.jpg">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
       </div>
+    <!-- End of second card-->
              
-        <!--Second Text-->
         </main>
         <footer class="page-footer">
             <div class="container">
