--- a/aboutus.html
+++ b/aboutus.html
@@ -15,10 +15,10 @@
  <script type="text/javascript" src="js/materialize.min.js"></script>
   <header>
       <div class="row"> 
-      <div class="col s4 m4">
-          </div>
+      
           <div class="row">
-          <img src ="images/afternoon.jpeg" max-width="100%" height="auto">
+         <img src ="images/afternoon.jpeg" width="1450" height="auto">
+
       </div>
       </div>
   </header>
@@ -120,7 +120,7 @@
                     </div>
                     <!--External Link to Google+-->
                     <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Google+</a>
+                        <a class="waves-effect waves-light btn-large">GitHub</a>
                     </div>
                 </div>
             </div>
