--- a/fandq.html
+++ b/fandq.html
@@ -15,9 +15,8 @@
  <script type="text/javascript" src="js/materialize.min.js"></script>
   <header>
       <div class="row"> 
-     
           <div class="row">
-        <img src ="images/afternoon.jpeg" width="1450" height="auto">
+         <img src ="images/afternoon.jpeg" width="1450" height="auto">
 
       </div>
       </div>
@@ -46,7 +45,7 @@
     <!-- End of nav bar-->
          <main>
         <!--Section Title-->
-            <a class="brand-logo center"><h4>Home Page</h4></a>
+            <a class="brand-logo center"><h4>F&amp;Q</h4></a>
         <!--Image-->
             <div class="row container">
                 <div class="col s3 m3">
