--- a/inhouse.html
+++ b/inhouse.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Ann's Afternoon Teas</title>
-    <!--Import Google Icon Font-->
+    <!-- Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
+    <!-- Materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <!-- my style sheet-->
     <link href="css/mystylesheet.css" type="text/css" rel="stylesheet"/>
@@ -21,7 +21,6 @@
       </div>
       </div>
   </header>
-    <main>
   <!-- Start of nav bar-->
   <nav>
     <div class="nav-wrapper">
@@ -43,7 +42,7 @@
     </div>
   </nav>
     <!-- End of nav bar-->
-         <main>
+      <main>
         <!--First card-->
             <a class="brand-logo center"><h4>In House Afternoon Tea</h4></a>
         <div class="row">
@@ -100,6 +99,7 @@
                         <a class="waves-effect waves-light btn-large">GitHub</a>
                     </div>
                 </div>
+                <P>Built By Carly Twist</P>
             </div>
           <div class="footer-copyright">
             <div class="container">
