--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,6 @@
       </div>
       </div>
   </header>
-    <main>
   <!-- Start of nav bar-->
   <nav>
     <div class="nav-wrapper">
@@ -123,6 +122,7 @@
                         <a class="waves-effect waves-light btn-large">GitHub</a>
                     </div>
                 </div>
+                <P>Built By Carly Twist</P>
             </div>
           <div class="footer-copyright">
             <div class="container">
