--- a/external.html
+++ b/external.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Ann's Afternoon Teas</title>
-    <!--Import Google Icon Font-->
+    <!-- Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
+    <!-- Materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <!-- my style sheet-->
     <link href="css/mystylesheet.css" type="text/css" rel="stylesheet"/>
@@ -15,12 +15,12 @@
  <script type="text/javascript" src="js/materialize.min.js"></script>
   <header>
       <div class="row"> 
-          <div class="row">
-          <img src ="images/afternoon.jpeg" width="1450" height="auto">
+       <div class="row">
+       <img src ="images/afternoon.jpeg" width="1450" height="auto">
+
       </div>
       </div>
   </header>
-    <main>
   <!-- Start of nav bar-->
   <nav>
     <div class="nav-wrapper">
@@ -42,7 +42,7 @@
     </div>
   </nav>
     <!-- End of nav bar-->
-         <main>
+      <main>
         <!--First card-->
             <a class="brand-logo center"><h4>External Afternoon Tea</h4></a>
         <div class="row">
@@ -54,7 +54,7 @@
             </div>
             <div class="card-content">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut placerat leo. Quisque viverra consectetur turpis. Ut posuere at erat eu semper. Etiam varius quam metus, ut feugiat nibh iaculis convallis. Praesent venenatis sem quis ante porta rutrum. Suspendisse sagittis euismod lectus at mollis. Nam condimentum ultrices risus, eget sagittis enim.
-
+            
               Curabitur eget ornare felis. Praesent quis vehicula ligula. Praesent semper urna nec nisi ultrices egestas eu vel purus. Phasellus nec commodo enim, ut vehicula velit. Aenean imperdiet pharetra ligula nec laoreet. Donec a magna vestibulum, vehicula sem vitae, tristique ipsum. Vestibulum pellentesque porta turpis, id pellentesque eros congue gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque ac pretium diam. In non est non nulla condimentum rhoncus. Vivamus hendrerit ante et libero ornare, nec interdum dui imperdiet.</p>
             </div>
             <div class="card-action">
@@ -62,8 +62,6 @@
             </div>
           </div>
         </div>
-        <!-- End of first card-->
-        <!-- Start of second card-->
             <div class="col s6 m6">
           <div class="card">
             <div class="card-image">
@@ -81,7 +79,7 @@
           </div>
         </div>
       </div>
- <!-- End of second card-->
+    <!-- End of second card-->
              
         </main>
         <footer class="page-footer">
@@ -101,6 +99,7 @@
                         <a class="waves-effect waves-light btn-large">GitHub</a>
                     </div>
                 </div>
+                <P>Built By Carly Twist</P>
             </div>
           <div class="footer-copyright">
             <div class="container">
