--- a/fandq.html
+++ b/fandq.html
@@ -21,7 +21,6 @@
       </div>
       </div>
   </header>
-    <main>
   <!-- Start of nav bar-->
   <nav>
     <div class="nav-wrapper">
@@ -93,8 +92,9 @@
                         <a class="waves-effect waves-light btn-large">GitHub</a>
                     </div>
                 </div>
+                <P>Built By Carly Twist</P>
             </div>
-          <div class="footer-copyright">
+            <div class="footer-copyright">
             <div class="container">
             </div>
           </div>
