--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       </div>
       </div>
   </header>
-    <main>
   <!-- Start of nav bar-->
   <nav>
     <div class="nav-wrapper">
@@ -72,7 +71,7 @@
       <div class="col s4 m4">
           </div>
           <div class="row">
-           <a href="https://placeholder.com"><img src="http://via.placeholder.com/400x400"></a>
+           <a href="https://placeholder.com"><img src="http://via.placeholder.com/800x400"></a>
       </div>
       </div>
              
@@ -94,6 +93,7 @@
                         <a class="waves-effect waves-light btn-large">GitHub</a>
                     </div>
                 </div>
+                <P>Built By Carly Twist</P>
             </div>
           <div class="footer-copyright">
             <div class="container">
