--- a/fandq.html
+++ b/fandq.html
@@ -59,20 +59,13 @@
                     <div class="col s8">
                         <div class="card">
                             <div class="card-content black-text">
-                                <span class="card-title">Afternoon tea's</span>
+                                <span class="card-title">F&amp;Q</span>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et mattis justo, sit amet varius lacus. Vestibulum non congue justo. Vivamus consequat at justo ac aliquam. Cras pellentesque varius nisi eget feugiat. Nulla facilisi. Ut pharetra non mauris sed rhoncus. In porttitor gravida ante, eu vestibulum purus euismod a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vel tempus leo. Aliquam sed eros sit amet arcu vehicula egestas. Curabitur tristique eros in magna malesuada, non mollis orci aliquet. Nullam facilisis varius imperdiet.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-             <div class="row"> 
-      <div class="col s4 m4">
-          </div>
-          <div class="row">
-           <a href="https://placeholder.com"><img src="http://via.placeholder.com/400x400"></a>
-      </div>
-      </div>
+             </div>
              
         <!--Second Text-->
         </main>
