--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,8 @@
  <!--Import jQuery before materialize.js-->
  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
  <script type="text/javascript" src="js/materialize.min.js"></script>
+ <script type="text/javascript"  src="js/myjs.js"></script>
+      
   <header>
       <div class="row"> 
       
@@ -46,6 +48,13 @@
          <main>
         <!--Section Title-->
             <a class="brand-logo center"><h4>About us</h4></a>
+             <div class="carousel">
+                 <a class="carousel-item" href="#"><img src="images/cakePic1.psd"></a>
+                 <a class="carousel-item" href="#"><img src="https://lorempixel.com/250/250/nature/2"></a>
+                 <a class="carousel-item" href="#"><img src="https://lorempixel.com/250/250/nature/3"></a>
+                 <a class="carousel-item" href="#"><img src="https://lorempixel.com/250/250/nature/4"></a>
+                 <a class="carousel-item" href="#"><img src="https://lorempixel.com/250/250/nature/5"></a>
+            </div>
         <!--Image-->
             <div class="row container">
                 <div class="col s3 m3">
