--- a/inhouse.html
+++ b/inhouse.html
@@ -98,7 +98,7 @@
                     </div>
                     <!--External Link to Google+-->
                     <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">GitHub</a>
+                        <a class="waves-effect waves-light btn-large">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
