--- a/fandq.html
+++ b/fandq.html
@@ -32,45 +32,43 @@
         <li><a href="aboutus.html">About us </a></li>
         <li><a href="inhouse.html">In house afternoon tea</a></li>
         <li><a href="external.html">External Afternoon tea</a></li>
-        <li><a href="fandq.html">F&amp;Q</a></li>
+        <li><a href="fandq.html">Orders and Enquiries</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="index.html">index</a></li>
         <li><a href="aboutus.html">About us</a></li>
         <li><a href="inhouse.html">In house afternoon tea</a></li>
         <li><a href="external.html">External Afternnon tea</a></li>
-        <li><a href="external.html">F &amp;Q</a></li>
+        <li><a href="external.html">Oders and Enquiries</a></li>
       </ul>
     </div>
   </nav>
     <!-- End of nav bar-->
          <main>
         <!--Section Title-->
-            <a class="brand-logo center"><h4>F&amp;Q</h4></a>
-        <!--Image-->
-            <div class="row container">
-                <div class="col s3 m3">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="assets/Img1.jpg">
-                        </div>
-                    </div>
-                </div>
-                <!--Main text-->
-                <div class="row">
-                    <div class="col s8">
-                        <div class="card">
-                            <div class="card-content black-text">
-                                <span class="card-title">F&amp;Q</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et mattis justo, sit amet varius lacus. Vestibulum non congue justo. Vivamus consequat at justo ac aliquam. Cras pellentesque varius nisi eget feugiat. Nulla facilisi. Ut pharetra non mauris sed rhoncus. In porttitor gravida ante, eu vestibulum purus euismod a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vel tempus leo. Aliquam sed eros sit amet arcu vehicula egestas. Curabitur tristique eros in magna malesuada, non mollis orci aliquet. Nullam facilisis varius imperdiet.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-             </div>
-             
-        <!--Second Text-->
-        </main>
+            <a class="brand-logo center"><h4>Orders and Enquiries</h4></a>
+       <div class="row">
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s6">
+          <i class="material-icons prefix">account_circle</i>
+          <input id="icon_prefix" type="text" class="validate">
+          <label for="icon_prefix">First Name</label>
+        </div>
+        <div class="input-field col s6">
+          <i class="material-icons prefix">phone</i>
+          <input id="icon_telephone" type="tel" class="validate">
+          <label for="icon_telephone">Telephone</label>
+        </div>
+          <div class="input-field col s6">
+          <i class="material-icons prefix">phone</i>
+          <input id="icon_telephone" type="tel" class="validate">
+          <label for="icon_telephone">Question</label>
+        </div>
+      </div>
+    </form>
+  </div>
+     </main>
         <footer class="page-footer">
             <div class="container">
                 <div class="row">
@@ -78,13 +76,9 @@
                     <div class="col l3">
                         <a class="waves-effect waves-light btn-large">Contact</a>
                     </div>
-                    <!--External Link to Twitter-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Twitter</a>
-                    </div>
                     <!--External Link to Google+-->
                     <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Facebook</a>
+                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
