--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <li><a href="aboutus.html">About us </a></li>
         <li><a href="inhouse.html">In house afternoon tea</a></li>
         <li><a href="external.html">External Afternoon tea</a></li>
-        <li><a href="fandq.html">F&amp;Q</a></li>
+        <li><a href="fandq.html">Orders and Enquires</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="index.html">index</a></li>
         <li><a href="aboutus.html">About us</a></li>
         <li><a href="inhouse.html">In house afternoon tea</a></li>
         <li><a href="external.html">External Afternnon tea</a></li>
-        <li><a href="external.html">F &amp;Q</a></li>
+        <li><a href="external.html">Orders and Enquiries</a></li>
       </ul>
     </div>
   </nav>
@@ -53,7 +53,7 @@
                 <div class="col s3 m3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/Img1.jpg">
+                            <img src="images/afternoon.jpeg">
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                         <div class="card">
                             <div class="card-content black-text">
                                 <span class="card-title">Afternoon tea's</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et mattis justo, sit amet varius lacus. Vestibulum non congue justo. Vivamus consequat at justo ac aliquam. Cras pellentesque varius nisi eget feugiat. Nulla facilisi. Ut pharetra non mauris sed rhoncus. In porttitor gravida ante, eu vestibulum purus euismod a. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi vel tempus leo. Aliquam sed eros sit amet arcu vehicula egestas. Curabitur tristique eros in magna malesuada, non mollis orci aliquet. Nullam facilisis varius imperdiet.</p>
+                                <p>Aternoon Tea's were imtroduced in Britain in the early 1840s.People classed it as a mini meal to keep the hunger at bay untill an evening which was at 8pm. An Afternoon Tea is composed of sandwiches which are cut into fingers. You then get a selection of scones with Jam and clotted cream , small sweet pastries and cakes. </p>
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
       <div class="col s4 m4">
           </div>
           <div class="row">
-           <a href="https://placeholder.com"><img src="http://via.placeholder.com/800x400"></a>
+           <img src="images/inside.jpg">
       </div>
       </div>
              
@@ -83,16 +83,21 @@
             <div class="container">
                 <div class="row">
                     <!--Contact Pop-Up Button-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Contact</a>
-                    </div>
-                    <!--External Link to Twitter-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Twitter</a>
-                    </div>
+                      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+                    <!-- Modal Structure -->
+                    <div id="modal1" class="modal">
+                    <div class="modal-content">
+                    <h4>Contact</h4>
+                        <p>Number</p>
+                            </div>
+                            <div class="modal-footer">
+                                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                                </div>
+                            </div>
                     <!--External Link to Google+-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Facebook</a>
+                     <div class="col l3">
+                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
