--- a/inhouse.html
+++ b/inhouse.html
@@ -32,14 +32,14 @@
         <li><a href="aboutus.html">About us </a></li>
         <li><a href="inhouse.html">In house afternoon tea</a></li>
         <li><a href="external.html">External Afternoon tea</a></li>
-        <li><a href="fandq.html">F&amp;Q</a></li>
+        <li><a href="fandq.html">Oders and Enquires</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="index.html">Index</a></li>
         <li><a href="aboutus.html">About us</a></li>
         <li><a href="inhouse.html">In house afternoon tea</a></li>
         <li><a href="external.html">External Afternoon tea</a></li>
-        <li><a href="fandq.html">F&amp;Q</a></li>
+        <li><a href="fandq.html">Orders and Enquries</a></li>
       </ul>
     </div>
   </nav>
@@ -51,7 +51,7 @@
         <div class="col s6 m6">
           <div class="card">
             <div class="card-image">
-              <a href="https://placeholder.com"><img src="http://via.placeholder.com/200x200"></a>
+              <img src="images/cakePic1.jpeg">
               <span class="card-title">Card Title</span>
             </div>
             <div class="card-content">
@@ -59,24 +59,18 @@
             
               Curabitur eget ornare felis. Praesent quis vehicula ligula. Praesent semper urna nec nisi ultrices egestas eu vel purus. Phasellus nec commodo enim, ut vehicula velit. Aenean imperdiet pharetra ligula nec laoreet. Donec a magna vestibulum, vehicula sem vitae, tristique ipsum. Vestibulum pellentesque porta turpis, id pellentesque eros congue gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque ac pretium diam. In non est non nulla condimentum rhoncus. Vivamus hendrerit ante et libero ornare, nec interdum dui imperdiet.</p>
             </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
           </div>
         </div>
             <div class="col s6 m6">
           <div class="card">
             <div class="card-image">
-              <a href="https://placeholder.com"><img src="http://via.placeholder.com/200x200"></a>
+             <img src="images/afternoon2.jpeg">
               <span class="card-title">Card Title</span>
             </div>
             <div class="card-content">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut placerat leo. Quisque viverra consectetur turpis. Ut posuere at erat eu semper. Etiam varius quam metus, ut feugiat nibh iaculis convallis. Praesent venenatis sem quis ante porta rutrum. Suspendisse sagittis euismod lectus at mollis. Nam condimentum ultrices risus, eget sagittis enim.
 
               Curabitur eget ornare felis. Praesent quis vehicula ligula. Praesent semper urna nec nisi ultrices egestas eu vel purus. Phasellus nec commodo enim, ut vehicula velit. Aenean imperdiet pharetra ligula nec laoreet. Donec a magna vestibulum, vehicula sem vitae, tristique ipsum. Vestibulum pellentesque porta turpis, id pellentesque eros congue gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque ac pretium diam. In non est non nulla condimentum rhoncus. Vivamus hendrerit ante et libero ornare, nec interdum dui imperdiet.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
             </div>
           </div>
         </div>
@@ -91,14 +85,9 @@
                     <div class="col l3">
                         <a class="waves-effect waves-light btn-large">Contact</a>
                     </div>
-                    <!--External Link to LinkedIn-->
-                    <!--External Link to Twitter-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Twitter</a>
-                    </div>
                     <!--External Link to Google+-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Facebook</a>
+                     <div class="col l3">
+                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
