--- a/external.html
+++ b/external.html
@@ -78,16 +78,31 @@
     <!-- End of second card-->
              
         </main>
-        <footer class="page-footer">
+         <footer class="page-footer">
             <div class="container">
                 <div class="row">
                     <!--Contact Pop-Up Button-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Contact</a>
+                    <div class="col l2">
+                        <a class="waves-effect waves-light btn-large modal-trigger" href="#modal1">Contact</a>
+                    </div>
+                    <!--Contact Pop-Up Structure -->
+                    <div id="modal1" class="modal modal-fixed-footer">
+                        <div class="modal-content">
+                            <form role="form">
+                                <div class="row">
+                                    <div class="form-group col-lg-4">
+                                        <label>Phone Number 01543 279376</label>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+                        </div>
                     </div>
                     <!--External Link to Google+-->
                      <div class="col l3">
-                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf">Facebook</a>
+                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
