--- a/inhouse.html
+++ b/inhouse.html
@@ -52,7 +52,7 @@
           <div class="card">
             <div class="card-image">
               <img src="images/cakePic1.jpeg">
-              <span class="card-title">Card Title</span>
+              <span class="card-title">What to expect</span>
             </div>
             <div class="card-content">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut placerat leo. Quisque viverra consectetur turpis. Ut posuere at erat eu semper. Etiam varius quam metus, ut feugiat nibh iaculis convallis. Praesent venenatis sem quis ante porta rutrum. Suspendisse sagittis euismod lectus at mollis. Nam condimentum ultrices risus, eget sagittis enim.
@@ -78,16 +78,31 @@
     <!-- End of second card-->
              
         </main>
-        <footer class="page-footer">
+    <footer class="page-footer">
             <div class="container">
                 <div class="row">
                     <!--Contact Pop-Up Button-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Contact</a>
+                    <div class="col l2">
+                        <a class="waves-effect waves-light btn-large modal-trigger" href="#modal1">Contact</a>
+                    </div>
+                    <!--Contact Pop-Up Structure -->
+                    <div id="modal1" class="modal modal-fixed-footer">
+                        <div class="modal-content">
+                            <form role="form">
+                                <div class="row">
+                                    <div class="form-group col-lg-4">
+                                        <label>Phone Number 01543 279376</label>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+                        </div>
                     </div>
                     <!--External Link to Google+-->
                      <div class="col l3">
-                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf">Facebook</a>
+                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
