--- a/fandq.html
+++ b/fandq.html
@@ -61,7 +61,7 @@
           <label for="icon_telephone">Telephone</label>
         </div>
           <div class="input-field col s6">
-          <i class="material-icons prefix">phone</i>
+          <i class="material-icons prefix">question answer</i>
           <input id="icon_telephone" type="tel" class="validate">
           <label for="icon_telephone">Question</label>
         </div>
@@ -73,17 +73,32 @@
             <div class="container">
                 <div class="row">
                     <!--Contact Pop-Up Button-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large">Contact</a>
+                    <div class="col l2">
+                        <a class="waves-effect waves-light btn-large modal-trigger" href="#modal1">Contact</a>
+                    </div>
+                    <!--Contact Pop-Up Structure -->
+                    <div id="modal1" class="modal modal-fixed-footer">
+                        <div class="modal-content">
+                            <form role="form">
+                                <div class="row">
+                                    <div class="form-group col-lg-4">
+                                        <label>Phone Number 01543 279376</label>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+                        </div>
                     </div>
                     <!--External Link to Google+-->
-                    <div class="col l3">
-                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf">Facebook</a>
+                     <div class="col l3">
+                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
             </div>
-            <div class="footer-copyright">
+          <div class="footer-copyright">
             <div class="container">
             </div>
           </div>
