--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="col s3 m3">
                     <div class="card">
                         <div class="card-image">
-                            <img src="images/afternoon.jpeg">
+                          
                         </div>
                     </div>
                 </div>
@@ -83,21 +83,27 @@
             <div class="container">
                 <div class="row">
                     <!--Contact Pop-Up Button-->
-                      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
-                    <!-- Modal Structure -->
-                    <div id="modal1" class="modal">
-                    <div class="modal-content">
-                    <h4>Contact</h4>
-                        <p>Number</p>
-                            </div>
-                            <div class="modal-footer">
-                                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                    <div class="col l2">
+                        <a class="waves-effect waves-light btn-large modal-trigger" href="#modal1">Contact</a>
+                    </div>
+                    <!--Contact Pop-Up Structure -->
+                    <div id="modal1" class="modal modal-fixed-footer">
+                        <div class="modal-content">
+                            <form role="form">
+                                <div class="row">
+                                    <div class="form-group col-lg-4">
+                                        <label>Phone Number 01543 279376</label>
+                                    </div>
                                 </div>
-                            </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+                        </div>
+                    </div>
                     <!--External Link to Google+-->
                      <div class="col l3">
-                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf">Facebook</a>
+                        <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
                 </div>
                 <P>Built By Carly Twist</P>
