--- a/external.html
+++ b/external.html
@@ -52,12 +52,11 @@
           <div class="card">
             <div class="card-image">
              <img src="images/afternoon4.png">
-              <span class="card-title">Card Title</span>
+              <span class="card-title"></span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut placerat leo. Quisque viverra consectetur turpis. Ut posuere at erat eu semper. Etiam varius quam metus, ut feugiat nibh iaculis convallis. Praesent venenatis sem quis ante porta rutrum. Suspendisse sagittis euismod lectus at mollis. Nam condimentum ultrices risus, eget sagittis enim.
-            
-              Curabitur eget ornare felis. Praesent quis vehicula ligula. Praesent semper urna nec nisi ultrices egestas eu vel purus. Phasellus nec commodo enim, ut vehicula velit. Aenean imperdiet pharetra ligula nec laoreet. Donec a magna vestibulum, vehicula sem vitae, tristique ipsum. Vestibulum pellentesque porta turpis, id pellentesque eros congue gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque ac pretium diam. In non est non nulla condimentum rhoncus. Vivamus hendrerit ante et libero ornare, nec interdum dui imperdiet.</p>
+              <p>When having an external afternoon tea it will be giving to you on the afternoon stands or in tray for you to display later it all fits around your needs. 
+                </p>
             </div>
           </div>
         </div>
@@ -68,9 +67,8 @@
               <span class="card-title">Card Title</span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut placerat leo. Quisque viverra consectetur turpis. Ut posuere at erat eu semper. Etiam varius quam metus, ut feugiat nibh iaculis convallis. Praesent venenatis sem quis ante porta rutrum. Suspendisse sagittis euismod lectus at mollis. Nam condimentum ultrices risus, eget sagittis enim.
-
-              Curabitur eget ornare felis. Praesent quis vehicula ligula. Praesent semper urna nec nisi ultrices egestas eu vel purus. Phasellus nec commodo enim, ut vehicula velit. Aenean imperdiet pharetra ligula nec laoreet. Donec a magna vestibulum, vehicula sem vitae, tristique ipsum. Vestibulum pellentesque porta turpis, id pellentesque eros congue gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque ac pretium diam. In non est non nulla condimentum rhoncus. Vivamus hendrerit ante et libero ornare, nec interdum dui imperdiet.</p>
+              <p>Depending on the amount of people eating will depend on the amount of different fillings on offer as normal an external afternoon tea is for large numbers of people. You will get all the selection of mini cakes and scones included. 
+                </p>
             </div>
           </div>
         </div>
