--- a/inhouse.html
+++ b/inhouse.html
@@ -55,9 +55,8 @@
               <span class="card-title">What to expect</span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut placerat leo. Quisque viverra consectetur turpis. Ut posuere at erat eu semper. Etiam varius quam metus, ut feugiat nibh iaculis convallis. Praesent venenatis sem quis ante porta rutrum. Suspendisse sagittis euismod lectus at mollis. Nam condimentum ultrices risus, eget sagittis enim.
-            
-              Curabitur eget ornare felis. Praesent quis vehicula ligula. Praesent semper urna nec nisi ultrices egestas eu vel purus. Phasellus nec commodo enim, ut vehicula velit. Aenean imperdiet pharetra ligula nec laoreet. Donec a magna vestibulum, vehicula sem vitae, tristique ipsum. Vestibulum pellentesque porta turpis, id pellentesque eros congue gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque ac pretium diam. In non est non nulla condimentum rhoncus. Vivamus hendrerit ante et libero ornare, nec interdum dui imperdiet.</p>
+              <p>When having an afternoon tea for 2 you will get a choice of 4 different sandwich fillings and 6 mini cakes and 2 scones. For 6 people you will get the choice of 6 different sandwich fillings 18 mini cakes and 6 scones. All of these include pots of tea , coffee , water and fizzy drinks.  
+                </p>
             </div>
           </div>
         </div>
@@ -68,9 +67,8 @@
               <span class="card-title">Card Title</span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut placerat leo. Quisque viverra consectetur turpis. Ut posuere at erat eu semper. Etiam varius quam metus, ut feugiat nibh iaculis convallis. Praesent venenatis sem quis ante porta rutrum. Suspendisse sagittis euismod lectus at mollis. Nam condimentum ultrices risus, eget sagittis enim.
-
-              Curabitur eget ornare felis. Praesent quis vehicula ligula. Praesent semper urna nec nisi ultrices egestas eu vel purus. Phasellus nec commodo enim, ut vehicula velit. Aenean imperdiet pharetra ligula nec laoreet. Donec a magna vestibulum, vehicula sem vitae, tristique ipsum. Vestibulum pellentesque porta turpis, id pellentesque eros congue gravida. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque ac pretium diam. In non est non nulla condimentum rhoncus. Vivamus hendrerit ante et libero ornare, nec interdum dui imperdiet.</p>
+              <p>When you arrive at the cafe you will be seated at one of the decorated tables. You will then be asked who wants tea, coffee, pop or water from this you will be given coffee and tea pots to suit what you have asked for. Following this afternoon tea stand will be brought out to you with sandwiches and cakes which you have chosen from the list. Then you is left to do is sit back and relax   
+                </p>
             </div>
           </div>
         </div>
