--- a/aboutus.html
+++ b/aboutus.html
@@ -107,4 +107,11 @@
           </div>
         </footer>
    </body>
+    <script>
+      $(document).ready(function(){
+          $('.button-collapse').sideNav ({
+          draggable: true
+          ,});
+      });
+      </script>
 </html>
