--- a/fandq.html
+++ b/fandq.html
@@ -104,4 +104,11 @@
           </div>
         </footer>
    </body>
+    <script>
+      $(document).ready(function(){
+          $('.button-collapse').sideNav ({
+          draggable: true
+          ,});
+      });
+      </script>
 </html>
