--- a/index.html
+++ b/index.html
@@ -114,4 +114,11 @@
           </div>
         </footer>
    </body>
+    <script>
+      $(document).ready(function(){
+          $('.button-collapse').sideNav ({
+          draggable: true
+          ,});
+      });
+      </script>
 </html>
