--- a/inhouse.html
+++ b/inhouse.html
@@ -111,4 +111,11 @@
           </div>
         </footer>
    </body>
+    <script>
+      $(document).ready(function(){
+          $('.button-collapse').sideNav ({
+          draggable: true
+          ,});
+      });
+      </script>
 </html>
