--- a/inhouse.html
+++ b/inhouse.html
@@ -83,7 +83,6 @@
                     <div class="col l2">
                         <a class="waves-effect waves-light btn-large modal-trigger" href="#modal1">Contact</a>
                     </div>
-                    <!--Contact Pop-Up Structure -->
                     <div id="modal1" class="modal modal-fixed-footer">
                         <div class="modal-content">
                             <form role="form">
@@ -98,7 +97,7 @@
                             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
                         </div>
                     </div>
-                    <!--External Link to Google+-->
+                    <!--External Link to Facebook-->
                      <div class="col l3">
                         <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
