--- a/aboutus.html
+++ b/aboutus.html
@@ -53,7 +53,7 @@
                 <div class="col s3 m3">
                    
                 </div>
-                <!--Main text-->
+                <!--Main text and collapsible-->
                 <ul class="collapsible" data-collapsible="accordion">
     <li>
       <div class="collapsible-header"><i class="material-icons">free_breakfast</i>The Cafe</div>
@@ -79,7 +79,6 @@
                     <div class="col l2">
                         <a class="waves-effect waves-light btn-large modal-trigger" href="#modal1">Contact</a>
                     </div>
-                    <!--Contact Pop-Up Structure -->
                     <div id="modal1" class="modal modal-fixed-footer">
                         <div class="modal-content">
                             <form role="form">
@@ -94,7 +93,7 @@
                             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
                         </div>
                     </div>
-                    <!--External Link to Google+-->
+                    <!--External Link to Facebook-->
                      <div class="col l3">
                         <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
