--- a/external.html
+++ b/external.html
@@ -98,7 +98,7 @@
                             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
                         </div>
                     </div>
-                    <!--External Link to Google+-->
+                    <!--External Link to Facebook-->
                      <div class="col l3">
                         <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
