--- a/fandq.html
+++ b/fandq.html
@@ -76,8 +76,7 @@
                     <div class="col l2">
                         <a class="waves-effect waves-light btn-large modal-trigger" href="#modal1">Contact</a>
                     </div>
-                    <!--Contact Pop-Up Structure -->
-                    <div id="modal1" class="modal modal-fixed-footer">
+                   <div id="modal1" class="modal modal-fixed-footer">
                         <div class="modal-content">
                             <form role="form">
                                 <div class="row">
@@ -91,7 +90,7 @@
                             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
                         </div>
                     </div>
-                    <!--External Link to Google+-->
+                    <!--External Link to Facebook-->
                      <div class="col l3">
                         <a class="waves-effect waves-light btn-large" href="https://www.facebook.com/Anns-cafe-catering-128229990689081/?ref=br_tf" target="_blank">Facebook</a>
                     </div>
